2008-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.symbols: Add all newly added accessors so abicheck.sh passes

	* gtk/gtkwidget.c (gtk_widget_get_allocation): Remove unused variable
	and check if the widget is a GtkWidget subclass, not the uninitialized
	allocation.

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkaccellabel.h
	* gtk/gtkactiongroup.h
	* gtk/gtkalignment.h
	* gtk/gtkarrow.h
	* gtk/gtkaspectframe.h
	* gtk/gtkbin.h
	* gtk/gtkhandlebox.h
	* gtk/gtkprogressbar.h
	* gtk/gtkrange.h
	* gtk/gtkscale.h
	* gtk/gtkscalebutton.h
	* gtk/gtkselection.h: fix some formatting and spacing uglyness
	that got merged from the GSEAL branch.

2008-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtk.symbols:
	* gtk/gtkmessagedialog.c (gtk_message_dialog_get_image):
	* gtk/gtkmessagedialog.h:
	Add missing accessor for sealed field GtkMessageDialog->image.

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkprinter.h: the GSEAL branch added two includes for no
	reason.

2008-06-20  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/gtkaccelgroup.c:
	* gtk/gtkcolorseldialog.c:
	* gtk/gtkcontainer.c:
	* gtk/gtkdialog.c:
	* gtk/gtkentry.c (gtk_entry_class_init):
	* gtk/gtkfontsel.c:
	* gtk/gtkhandlebox.c:
	* gtk/gtklayout.c:
	* gtk/gtkmenu.c (gtk_menu_class_init):
	* gtk/gtkmenuitem.c (gtk_menu_item_class_init):
	* gtk/gtkplug.c (gtk_plug_class_init):
	* gtk/gtkselection.c:
	* gtk/gtksocket.c:
	* gtk/gtktreeselection.c:
	* gtk/gtkwidget.c (gtk_widget_class_init):
	* gtk/gtkwindow.c:
	Add missing Since: gtk-doc markup for newly added GSEAL API.
	Change all Since: GSEAL-branch to Since: 2.14.

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkaccelgroup.[ch]: fix some formatting and whitespace in
	the code merged from the GSEAL branch.

2008-06-20  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkdialog.[ch] (gtk_dialog_get_action_area): change return
	value from GtkHButtonBox to GtkWidget.
